--- a/js/digest.html
+++ b/js/digest.html
@@ -11,7 +11,11 @@
 <script type="text/javascript" src="digest.js"></script>
 </head>
 <body>
-<textarea id="x1"></textarea>
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+  <circle cx="100" cy="50" r="40" stroke="black"
+  stroke-width="2" fill="red" />
+</svg>
+<textarea id="x1" class="seqarea" placeholder="DNA sequence..."></textarea>
 <div id="vector"/>
 <div id="rebase"/>
 <button id="run"/>Digest1</button>
